-- change swagger to include AZ's in openstack metadata and mark changes
