# swagger.yml
@@ -200,6 +200,17 @@ definitions:
   OpenstackMetadata:
     type: object
     properties:
+      availabilityZones:
+        type: array
+        items:
+          x-nullable: false
+          type: object
+          x-go-name: AvailabiltyZone
+          properties:
+            name:
+              type: string
+            alias:
+              type: string
       flavors:
         type: array
         items:
@@ -413,6 +424,9 @@ definitions:
         x-nullable: false
         type: string
         default: coreos-stable-amd64
+      availabilityZone:
+        type: string
+        x-nullable: false
       config:
         $ref: '#/definitions/NodePoolConfig'
   NodePoolConfig:
